Silence deployment notifications

--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,8 @@
   "rewrites": [
     { "source": "/auth", "destination": "/api/auth.ts" },
     { "source": "/callback", "destination": "/api/callback.ts" }
-  ]
+  ],
+  "github": {
+    "silent": true
+  }
 }
